refactor: rename pet4d_img_path -> input_image_path

--- a/test_notebooks/testing_graphical_analyses/02_testing_parametric_images.ipynb
+++ b/test_notebooks/testing_graphical_analyses/02_testing_parametric_images.ipynb
@@ -806,7 +806,7 @@
    "outputs": [],
    "source": [
     "patlak_pim = pet_pim.GraphicalAnalysisParametricImage(input_tac_path='../../../../PracticeData/4DPET/1179307_v2_pTAC_resampled_on_scanner_times.txt',\n",
-    "                                                     pet4D_img_path='../../../../PracticeData/4DPET/1179307_v2_FDG_on_mpr.nii.gz',\n",
+    "                                                     input_image_path='../../../../PracticeData/4DPET/1179307_v2_FDG_on_mpr.nii.gz',\n",
     "                                                     output_directory='../../../../PracticeData/4DPET/',\n",
     "                                                     output_filename_prefix='test')"
    ]
@@ -1099,7 +1099,7 @@
    "outputs": [],
    "source": [
     "tmp_logan_img_new = pet_pim.GraphicalAnalysisParametricImage(input_tac_path='../../../../PracticeData/4DPET/1179307_v2_pTAC_resampled_on_scanner_times.txt',\n",
-    "                                                     pet4D_img_path='../../../../PracticeData/4DPET/1179307_v2_FDG_on_mpr.nii.gz',\n",
+    "                                                     input_image_path='../../../../PracticeData/4DPET/1179307_v2_FDG_on_mpr.nii.gz',\n",
     "                                                     output_directory='../../../../PracticeData/4DPET/',\n",
     "                                                     output_filename_prefix='test')"
    ]
@@ -1996,7 +1996,7 @@
    "outputs": [],
    "source": [
     "patlak_pim = pet_pim.GraphicalAnalysisParametricImage(input_tac_path='../../../../PracticeData/4DPET/1179307_v2_pTAC_resampled_on_scanner_times.txt',\n",
-    "                                                     pet4D_img_path='../../../../PracticeData/4DPET/1179307_v2_FDG_on_mpr.nii.gz',\n",
+    "                                                     input_image_path='../../../../PracticeData/4DPET/1179307_v2_FDG_on_mpr.nii.gz',\n",
     "                                                     output_directory='../../../../PracticeData/4DPET/',\n",
     "                                                     output_filename_prefix='test')\n",
     "patlak_pim.run_analysis(method_name='patlak', t_thresh_in_mins=30.0)\n",
@@ -2025,7 +2025,7 @@
    "outputs": [],
    "source": [
     "logan_pim = pet_pim.GraphicalAnalysisParametricImage(input_tac_path='../../../../PracticeData/4DPET/1179307_v2_pTAC_resampled_on_scanner_times.txt',\n",
-    "                                                     pet4D_img_path='../../../../PracticeData/4DPET/1179307_v2_FDG_on_mpr.nii.gz',\n",
+    "                                                     input_image_path='../../../../PracticeData/4DPET/1179307_v2_FDG_on_mpr.nii.gz',\n",
     "                                                     output_directory='../../../../PracticeData/4DPET/',\n",
     "                                                     output_filename_prefix='test')\n",
     "logan_pim.run_analysis(method_name='logan', t_thresh_in_mins=30.0)\n",
@@ -2054,7 +2054,7 @@
    "outputs": [],
    "source": [
     "alt_logan_pim = pet_pim.GraphicalAnalysisParametricImage(input_tac_path='../../../../PracticeData/4DPET/1179307_v2_pTAC_resampled_on_scanner_times.txt',\n",
-    "                                                     pet4D_img_path='../../../../PracticeData/4DPET/1179307_v2_FDG_on_mpr.nii.gz',\n",
+    "                                                     input_image_path='../../../../PracticeData/4DPET/1179307_v2_FDG_on_mpr.nii.gz',\n",
     "                                                     output_directory='../../../../PracticeData/4DPET/',\n",
     "                                                     output_filename_prefix='test')\n",
     "alt_logan_pim.run_analysis(method_name='alt_logan', t_thresh_in_mins=30.0)\n",
